--- a/src/Box2DBindings.csproj
+++ b/src/Box2DBindings.csproj
@@ -10,6 +10,8 @@
         <License>MIT</License>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+
+        <PackageReadmeFile>README.md</PackageReadmeFile>
         
         <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
@@ -31,6 +33,12 @@
 
     </PropertyGroup>
 
+    <ItemGroup>
+        
+        <None Include="../README.md" Pack="true" PackagePath="\" />
+        
+    </ItemGroup>
+    
 </Project>
 
 
