--- a/src/Box2DBindings.csproj
+++ b/src/Box2DBindings.csproj
@@ -34,11 +34,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <!-- Readme -->
+        <None Include="../README.md" Pack="true" PackagePath="/" />
         
-        <None Include="../README.md" Pack="true" PackagePath="\" />
-        
+        <!-- Windows DLL -->
+        <None Include="native/win-x64/box2d.dll" Pack="true" PackagePath="runtimes/win-x64/native/" />
+        <!-- Linux SO -->
+        <None Include="native/linux-x64/libbox2d.so.*" Pack="true" PackagePath="runtimes/linux-x64/native/" />
+            
     </ItemGroup>
-    
+
+
 </Project>
 
 
