--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v2
         with:
-          cmake-version: 3.21.3
+          cmake-version: 3.22.x
           
       - name: Build Box2D (Linux)
         run: |
