Set upload-artifact steps to error on no files Added ls to view Windwos build output

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,12 +27,16 @@ jobs:
           cd build
           cmake -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF ..
           cmake --build .
-          
+      
+      - name: List outputs
+        run: ls -al box2d-src/build/src/
+        
       - name: Upload to artifacts
         uses: actions/upload-artifact@v4
         with:
           name: box2d-windows
           path: 'box2d-src/build/src/box2d*.dll'
+          if-no-files-found: error
   
   build-box2d-linux:
     runs-on: ubuntu-latest
@@ -61,6 +65,7 @@ jobs:
         with:
           name: box2d-linux
           path: 'box2d-src/build/src/libbox2d.so.*'
+          if-no-files-found: error
           
   build-and-deploy-bindings:
     needs: [build-box2d-windows, build-box2d-linux]
