--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,8 @@ jobs:
           cd build
           cmake -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF ..
           cmake --build . --config Release
-          ren bin\Release\shared.dll bin\Release\box2d.dll
+          cd bin\Release
+          ren shared.dll box2d.dll
       
       - name: Upload to artifacts
         uses: actions/upload-artifact@v4
