--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,14 +56,16 @@ jobs:
           cd box2d-src
           mkdir build
           cd build
-          cmake -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF ..
+          cmake -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin ..
           cmake --build .
+          rm bin/libbox2d.so
+          mv bin/libbox2d.so.3.1.0 bin/libbox2d.so
         
       - name: Upload to artifacts
         uses: actions/upload-artifact@v4
         with:
           name: box2d-linux
-          path: 'box2d-src/build/src/libbox2d.so*'
+          path: 'box2d-src/build/bin/libbox2d.so'
           if-no-files-found: error
           
   build-and-deploy-bindings:
