--- a/src/Box2DBindings.csproj
+++ b/src/Box2DBindings.csproj
@@ -40,7 +40,7 @@
         <!-- Windows DLL -->
         <None Include="native/win-x64/box2d.dll" Pack="true" PackagePath="runtimes/win-x64/native/" />
         <!-- Linux SO -->
-        <None Include="native/linux-x64/libbox2d.so.*" Pack="true" PackagePath="runtimes/linux-x64/native/" />
+        <None Include="native/linux-x64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x64/native/" />
             
     </ItemGroup>
 
