Fixed linux native lib path

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,14 +58,14 @@ jobs:
           cd build
           cmake -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DBOX2D_SAMPLES=OFF -DCMAKE_LIBRARY_OUTPUT_DIRECTORY=bin -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=bin ..
           cmake --build .
-          rm bin/libbox2d.so
-          mv bin/libbox2d.so.3.1.0 bin/libbox2d.so
+          rm src/bin/libbox2d.so
+          mv src/bin/libbox2d.so.3.1.0 src/bin/libbox2d.so
         
       - name: Upload to artifacts
         uses: actions/upload-artifact@v4
         with:
           name: box2d-linux
-          path: 'box2d-src/build/bin/libbox2d.so'
+          path: 'box2d-src/build/src/bin/libbox2d.so'
           if-no-files-found: error
           
   build-and-deploy-bindings:
