--- a/.github/workflows/triggered-build.yml
+++ b/.github/workflows/triggered-build.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/github-script@v5
         with:
           script: |
-            const { getOctokit, context } = require('@actions/github');
+            const { getOctokit } = require('@actions/github');
             const octokit = getOctokit(process.env.PAT);
             octokit.rest.actions.createWorkflowDispatch({
               owner: 'HughPH',
