--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -10,16 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger another pipeline
-        uses: actions/github-script@v5
+        uses: octokit/request-action@v2.x
+        id: trigger
         with:
-          script: |
-            const { getOctokit } = require('@actions/github');
-            const octokit = getOctokit(process.env.PAT);
-            octokit.rest.actions.createWorkflowDispatch({
-              owner: 'HughPH',
-              repo: 'Box2D-dotnet-bindings',
-              workflow_id: 'publish.yml',
-              ref: 'main'
-            });
+          route: POST /repos/{owner}/{repo}/actions/workflows/publish.yml/dispatches
+          owner: HughPH
+          repo: Box2D-dotnet-bindings
         env:
-          PAT: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
