--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,10 @@ jobs:
     runs-on: windows-latest
     steps:      
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+      
       - name: Clone Box2D
         run: git clone --depth 1 https://github.com/erincatto/box2d.git box2d-src
       
@@ -38,8 +40,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:      
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+      
       - name: Clone Box2D
         run: git clone --depth 1 https://github.com/erincatto/box2d.git box2d-src
         
@@ -70,8 +74,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+      
       - name: Get Windows artefacts
         uses: actions/download-artifact@v4
         with:
