--- a/src/Box2DBindings.csproj
+++ b/src/Box2DBindings.csproj
@@ -34,7 +34,7 @@
 
     <ItemGroup>
         <!-- Readme -->
-        <None Include="../README.md" Pack="true" PackagePath="/" />
+        <None Include="README.md" Pack="true" PackagePath="/" />
         
         <!-- Windows DLL -->
         <None Include="native/win-x64/box2d.dll" Pack="true" PackagePath="runtimes/win-x64/native/" />
