Added Unit Tests project Added initial tests Fixed joints that could not be created Changed *Def.Default to a Property

--- a/src/Box2DBindings.csproj
+++ b/src/Box2DBindings.csproj
@@ -50,10 +50,12 @@
         <!-- Windows DLL -->
         <None Include="native/win-x64/box2d.dll" Pack="true" PackagePath="runtimes/win-x64/native/" />
         <!-- Linux SO -->
-        <None Include="native/linux-x64/libbox2d.so" Pack="true" PackagePath="runtimes/linux-x64/native/" />
             
         <!-- XMLDoc -->
         <None Include="bin/$(Configuration)/netstandard2.1/Box2DBindings.xml" Pack="true" PackagePath="lib/netstandard2.1/" />
+        <None Update="native\linux-x64\libbox2d.so">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 
