--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,9 +36,13 @@ jobs:
             post_build_cmd: "echo 'macOS build complete'"
     
     steps:
-      - name: Clone Box2D
-        run: git clone --depth 1 --branch $(git ls-remote --tags --sort=-v:refname https://github.com/erincatto/box2d.git | head -n 1 | sed 's/.*refs\/tags\///') https://github.com/erincatto/box2d.git box2d-src
-
+      - name: Clone Box2D (Latest Tag)
+        shell: bash
+        run: |
+          latest_tag=$(git ls-remote --tags --sort=-v:refname https://github.com/erincatto/box2d.git | awk -F/ '{print $NF}' | grep -E '^[vV]?[0-9]+\.[0-9]+\.[0-9]+$' | head -n 1)
+          echo "Latest tag: $latest_tag"
+          git clone --depth 1 --branch $latest_tag https://github.com/erincatto/box2d.git box2d-src
+                
       - name: Setup CMake
         uses: jwlawson/actions-setup-cmake@v2
         with:
