--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
             cmake_build_dir: "box2d-src/build"
             post_build_cmd: |
               cd box2d-src/build/bin/Release
+              dir
               ren shared.dll box2d.dll
 
           - os: ubuntu-latest
