Fixed paths for osx .dynlib for the main project and linux .so for the unit tests

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -96,7 +96,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: box2d-macos
-          path: src/native/osx-x64
+          path: src/Box2DBindings/native/osx-x64
 
       - name: Setup dotnet
         uses: actions/setup-dotnet@v3
@@ -107,7 +107,7 @@ jobs:
         run: dotnet build src/UnitTests --configuration Release
 
       - name: Copy Linux shared library to UnitTests output
-        run: cp src/native/linux-x64/libbox2d.so src/UnitTests/bin/Release/net9.0/
+        run: cp src/Box2DBindings/native/linux-x64/libbox2d.so src/UnitTests/bin/Release/net9.0/
 
       - name: Run UnitTests
         run: dotnet test src/UnitTests --configuration Release --no-build --logger trx --results-directory TestResults
