Updated check-box2d-last-push.yml to only checkout the whole repo if there was a change Fixed step name in push-build.yml

--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -9,6 +9,6 @@ jobs:
   trigger:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger another pipeline
+      - name: Trigger the publish pipeline
         run: |
             curl -X POST -H "Accept: application/vnd.github.everest-preview +json" -H "Authorization: token ${{ secrets.PAT }}" https://api.github.com/repos/HughPH/Box2D-dotnet-bindings/dispatches --data '{"event_type": "publish"}'
