--- a/.github/workflows/check-box2d-last-push.yml
+++ b/.github/workflows/check-box2d-last-push.yml
@@ -9,12 +9,8 @@ jobs:
         runs-on: ubuntu-latest
         
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 1
-
             - name: Fetch last push date/time from main branch
+              id: compare_push
               run: |
                   # This grabs the date/time of the last commit on Box2D's main branch
                   last_push=$(curl -s https://api.github.com/repos/erincatto/box2d/branches/main | jq -r '.commit.commit.committer.date')
@@ -23,21 +19,40 @@ jobs:
                   # If we failed to retrieve last_push (or it's literally "null"), exit early
                   if [ -z "$last_push" ] || [ "$last_push" = "null" ]; then
                     echo "No valid last push data received. Exiting."
+                    echo "changed=false" >> $GITHUB_OUTPUT
                     exit 0
                   fi
                   
-                  # If we already have a record, compare. If it's the same, exit. If it doesn't parse, reset.
-                  if [ -f box2d_last_push.json ]; then
-                    old_push=$(jq -r '.last_push' box2d_last_push.json)
-                    if [ $? -ne 0 ]; then
-                      echo "Corrupt JSON detected. Deleting and resetting..."
-                      rm box2d_last_push.json
-                    elif [ "$last_push" == "$old_push" ]; then
-                      echo "The last push has not changed (main branch)."
-                      exit 0
-                    fi
-                  fi
+                  # 2. Fetch the previously recorded time from the raw file
+                  old_push=$(curl -s https://raw.githubusercontent.com/HughPH/Box2D-dotnet-bindings/main/box2d_last_push.json | jq -r '.last_push')
+                  # check for non-zero exit code
+                  if [ $? -ne 0 ]; then
+                    echo "No previous push data found. Assuming first run, or deleted file"
+                    echo "changed=true" >> $GITHUB_OUTPUT
+                    exit 0
+                  fi                  
                   
+                  echo "Previously recorded date/time: old_push"
+                  
+                  # 3. Compare
+                  if [ "$last_push" = "old_push" ]; then
+                    echo "No changes since last recorded push."
+                    echo "changed=false" >> $GITHUB_OUTPUT
+                  else
+                    echo "Remote has changed since last recorded push."
+                    # Indicate to subsequent steps that a change was detected
+                    echo "changed=true" >> $GITHUB_OUTPUT
+                  fi
+
+            - name: Checkout repository
+              if: steps.compare_push.outputs.changed == 'true'
+              uses: actions/checkout@v4
+              with:
+                  fetch-depth: 1
+
+            - name: Update last_push file, commit & push
+              if: steps.compare_push.outputs.changed == 'true'
+              run: |
                   # Save the new push time to file
                   echo "{\"last_push\": \"$last_push\"}" > box2d_last_push.json
                   
