Fixed file-level namespace Fixed broken b2Body_GetName Replaced many properties with ref properties for nicer semantics - now you can just set fields on ShapeDef.Filter, for example, without needing to create and assign a new Filter. Changed some nints to their target pointer types Moved B2_MAX_POLYGON_VERTICES to Constants class Fixed casing of ContactBeginTouchEvent.Manifold Removed many Get*() methods where properties already existed Replaced some Get*() methods with properties Added Identity to Rotation and Transform

--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -63,6 +63,10 @@
         <None Include="bin/$(Configuration)/netstandard2.1/Box2DBindings.xml" Pack="true" PackagePath="lib/netstandard2.1/" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
+    </ItemGroup>
+
 
 </Project>
 
