--- a/src/Box2DBindings/Box2DBindings.csproj
+++ b/src/Box2DBindings/Box2DBindings.csproj
@@ -13,13 +13,12 @@
 
         <PackageReadmeFile>README.md</PackageReadmeFile>
         
-        <TargetFramework>net9.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Box2D</RootNamespace>
-        <LangVersion>preview</LangVersion>
+        <LangVersion>latest</LangVersion>
 
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
